score genre and earnings

--- a/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre_with_regressions.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre_with_regressions.ipynb
@@ -263,7 +263,7 @@
     }
    ],
    "source": [
-    "Score_Genre_df = pd.read_csv(\"../../csv_file/Score_Genre.csv\")\n",
+    "Score_Genre_df = pd.read_csv(\"../../csv_file/Score_Genre_Earnings.csv\")\n",
     "Score_Genre_df = Score_Genre_df.set_index('Key')\n",
     "\n",
     "# Empty columns need to be dropped after merge\n",
