--- a/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre_with_regressions.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre_with_regressions.ipynb
@@ -2146,7 +2146,7 @@
     "plt.plot(I,regression_line,label='Best Fit Line', color='orange',linewidth=4)\n",
     "plt.title('IMDb vs Rotten Tomatoes for History Movies')\n",
     "plt.xlabel('IMDb Score')\n",
-    "plt.ylabel('Rotten SciFi Score')\n",
+    "plt.ylabel('Rotten History Score')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
