Cleaning up file structure and editing Notebooks with new structure

--- a/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre_with_regressions_condensed.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre_with_regressions_condensed.ipynb
@@ -24,6 +24,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c97c3906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Place these installs into Conda Environment if missing dependencies\n",
+    "#!conda install -y -q pymssql\n",
+    "#!conda install -c conda-forge matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b95fb97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Run these if missing dependencies (uncomment seperately)\n",
+    "#pip install ipython-sql\n",
+    "#pip install pyodbc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "ecb08ae7",
    "metadata": {},
@@ -264,7 +288,7 @@
     }
    ],
    "source": [
-    "Score_Genre_df = pd.read_csv(\"../../csv_file/Score_Genre_Earnings.csv\")\n",
+    "Score_Genre_df = pd.read_csv(\"../../Resources/csv_file/Score_Genre_Earnings.csv\")\n",
     "Score_Genre_df = Score_Genre_df.set_index('Key')\n",
     "\n",
     "# Empty columns need to be dropped after merge\n",
@@ -6207,7 +6231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
