--- a/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
@@ -23,9 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Score_df = pd.read_csv(\"../../csv_file/Netflix_data_ML.csv\")\n",
-    "Genre_df = pd.read_csv(\"../../csv_file/Netflix_Dataset_Genre_Type.csv\")\n",
-    "Box_Office_df = pd.read_csv(\"../../csv_file/key_Boxoffice.csv\")"
+    "Score_df = pd.read_csv(\"../../Resources/csv_file/Key_ScoreData.csv\")\n",
+    "Genre_df = pd.read_csv(\"../../Resources/csv_file/Netflix_Dataset_Genre_Type.csv\")\n",
+    "Box_Office_df = pd.read_csv(\"../../Resources/csv_file/BoxOfficeData_OnKey.csv\")"
    ]
   },
   {
@@ -2017,17 +2017,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aa97d8a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = \"../../csv_file/Score_Genre.csv\"\n",
-    "Score_Genre_df.to_csv(file_path, index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "7e2b8bbb",
    "metadata": {},
    "outputs": [
@@ -2429,7 +2418,7 @@
        "[3588 rows x 31 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2442,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6cdc758b",
    "metadata": {},
    "outputs": [
@@ -2462,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "fd83ab10",
    "metadata": {},
    "outputs": [],
@@ -2472,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "77b5c0d4",
    "metadata": {},
    "outputs": [
@@ -2874,24 +2863,13 @@
        "[3147 rows x 31 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Score_Genre_Earnings_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e5a36bc2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = \"../../csv_file/Score_Genre_Earnings.csv\"\n",
-    "Score_Genre_df.to_csv(file_path, index=True)"
    ]
   }
  ],
@@ -2911,7 +2889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
