--- a/Jupyter Notebooks/Machine-Learning/DB_Connected_DataFrames_by_genre_regressions.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DB_Connected_DataFrames_by_genre_regressions.ipynb
@@ -10,6 +10,7 @@
     "%matplotlib inline\n",
     "import pyodbc\n",
     "import pymssql\n",
+    "import itertools\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -26,30 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b9562b3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Place these installs into Conda Environment if missing dependencies\n",
-    "#!conda install -y -q pymssql\n",
-    "#!conda install -c conda-forge matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c38f0857",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Run these if missing dependencies (uncomment seperately)\n",
-    "#pip install ipython-sql\n",
-    "#pip install pyodbc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "d80eae0a",
    "metadata": {},
    "outputs": [],
@@ -59,16 +36,13 @@
     "query = \"select * from dbo.Genre_Dataset \"\n",
     "cursor.execute(query)\n",
     "data = cursor.fetchall()\n",
-    "\n",
-    "#for item in data:\n",
-    "  #  print (item)\n",
-    "    \n",
+    "   \n",
     "connection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ed221ce8",
    "metadata": {},
    "outputs": [],
@@ -78,16 +52,13 @@
     "query = \"select * from dbo.Score_Dataset \"\n",
     "cursor.execute(query)\n",
     "data = cursor.fetchall()\n",
-    "\n",
-    "#for item in data:\n",
-    "  #  print (item)\n",
     "    \n",
     "connection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "08c76683",
    "metadata": {},
    "outputs": [],
@@ -96,15 +67,12 @@
     "cursor = connection.cursor()\n",
     "query = \"select * from dbo.Score_Dataset \"\n",
     "cursor.execute(query)\n",
-    "data = cursor.fetchall()\n",
-    "\n",
-    "#for item in data:\n",
-    "  #  print (item)"
+    "data = cursor.fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "0e54de55",
    "metadata": {},
    "outputs": [],
@@ -115,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ae00df9a",
    "metadata": {},
    "outputs": [],
@@ -126,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6f564453",
    "metadata": {},
    "outputs": [
@@ -360,7 +328,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "c646015c",
    "metadata": {},
    "outputs": [
@@ -608,7 +576,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +587,7 @@
     "                      {'Hidden Gem Score':'Hidden_Gem_Score', \n",
     "                       'IMDb Score':'IMDb_Score', \n",
     "                       'Rotten Tomatoes Score':'Rotten_Tomatoes_Score', \n",
-    "                       'Metacritic Score':'Metacritic_Score'}, \n",
+    "                       'Metacritic Score':'Metacritic_Score',\"SCI-FI\": \"SCI_FI\"}, \n",
     "                      inplace = True)\n",
     "Score_Genre_df.head() "
    ]
@@ -1285,7 +1253,6 @@
    ],
    "source": [
     "Score_Genre_df = Score_Genre_df.drop(['SHORT_WAR', 'REALITY_TV', 'TALK_SHOW', 'GAME_SHOW'], axis=1)\n",
-    "Score_Genre_df.rename(columns = {\"SCI-FI\": \"SCI_FI\"}, inplace = True)\n",
     "Score_Genre_df.head()"
    ]
   },
